--- a/EXAM/main.css
+++ b/EXAM/main.css
@@ -443,7 +443,7 @@ h1{
 /*---------------------footer------------------------*/
 footer{
     height: 170px;
-    width: 100%;
+    width: 1440px;
     background:  #F1F1F1;
     display: flex;
     align-items: center;
